--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "Sima Jamali"
+  linkedin         : "www.linkedin.com/in/sima-jamali-2a936975"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
