--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : " "
+title                    : "Home"
 title_separator          : "-"
 name                     : &name "Sima Jamali"
 description              : &description "personal description"
